docs : modifying the predict part

--- a/topic3/topic3_0128_4.ipynb
+++ b/topic3/topic3_0128_4.ipynb
@@ -1177,7 +1177,9 @@
     }
    ],
    "source": [
-    "print (predictions)"
+    "print (predictions)\n",
+    "\n",
+    "# 1e0은 확률이 1이라는 뜻이고 0e0은 확률이 0이라는 뜻"
    ]
   }
  ],
