--- a/topic4/topic4_0222_2.ipynb
+++ b/topic4/topic4_0222_2.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "bc548670-8d55-40e9-bac6-0bee38c60c50",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "30d44acf-1f42-4454-989d-460001a3c3c9",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "id": "d92f5b1c-e739-4251-812a-d4b41dacddb5",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "27d4640d-8e0a-4dac-a150-b789c8cc47ee",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 11,
    "id": "afd5bf9e-6e54-46d8-9c5b-d447d6810b33",
    "metadata": {},
    "outputs": [
@@ -174,9 +174,18 @@
      "output_type": "stream",
      "text": [
       "292022\n",
-      "25 11680\n",
-      "(11680, 25)\n"
+      "25 11680\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[5, 15, 0, 20, 0, 20, 5, 20, 20, 5, 17, 0, 18, 0, 20, 5, 18, 0, 20, 0, 20, 6]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -199,8 +208,7 @@
     "        break\n",
     "\n",
     "print (len(train_X[0]), len(train_Y))\n",
-    "train_X.pop()\n",
-    "print (np.array(train_X).shape)"
+    "train_X.pop()"
    ]
   },
   {
@@ -213,10 +221,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "id": "db8192b4-57d6-4e68-802d-37173c7391c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-02-24 17:36:55.559987: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import tensorflow as tf"
@@ -232,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 13,
    "id": "e1aab3b1-c0ae-406b-9689-c1df5b875002",
    "metadata": {},
    "outputs": [
@@ -283,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 14,
    "id": "2ca827a0-14c6-40e5-82fa-c4d2c448b273",
    "metadata": {},
    "outputs": [],
@@ -319,18 +336,234 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "aab19558-b873-4129-86e4-853a03e214bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/50\n",
+      "183/183 [==============================] - 4s 10ms/step - loss: 2.6572\n",
+      "Epoch 2/50\n",
+      "183/183 [==============================] - 2s 14ms/step - loss: 2.2418\n",
+      "Epoch 3/50\n",
+      "183/183 [==============================] - 4s 23ms/step - loss: 1.9373\n",
+      "Epoch 4/50\n",
+      "183/183 [==============================] - 4s 22ms/step - loss: 1.7647\n",
+      "Epoch 5/50\n",
+      "183/183 [==============================] - 5s 26ms/step - loss: 1.6843\n",
+      "Epoch 6/50\n",
+      "183/183 [==============================] - 4s 21ms/step - loss: 1.6329\n",
+      "Epoch 7/50\n",
+      "183/183 [==============================] - 3s 18ms/step - loss: 1.5915\n",
+      "Epoch 8/50\n",
+      "183/183 [==============================] - 4s 23ms/step - loss: 1.5501\n",
+      "Epoch 9/50\n",
+      "183/183 [==============================] - 5s 25ms/step - loss: 1.5207\n",
+      "Epoch 10/50\n",
+      "183/183 [==============================] - 4s 23ms/step - loss: 1.4900\n",
+      "Epoch 11/50\n",
+      "183/183 [==============================] - 5s 26ms/step - loss: 1.4615\n",
+      "Epoch 12/50\n",
+      "183/183 [==============================] - 5s 26ms/step - loss: 1.4361\n",
+      "Epoch 13/50\n",
+      "183/183 [==============================] - 6s 30ms/step - loss: 1.4115\n",
+      "Epoch 14/50\n",
+      "183/183 [==============================] - 5s 29ms/step - loss: 1.3907\n",
+      "Epoch 15/50\n",
+      "183/183 [==============================] - 4s 22ms/step - loss: 1.3714\n",
+      "Epoch 16/50\n",
+      "183/183 [==============================] - 4s 21ms/step - loss: 1.3468\n",
+      "Epoch 17/50\n",
+      "183/183 [==============================] - 5s 27ms/step - loss: 1.3241\n",
+      "Epoch 18/50\n",
+      "183/183 [==============================] - 6s 34ms/step - loss: 1.3008\n",
+      "Epoch 19/50\n",
+      "183/183 [==============================] - 5s 27ms/step - loss: 1.2781\n",
+      "Epoch 20/50\n",
+      "183/183 [==============================] - 5s 25ms/step - loss: 1.2551\n",
+      "Epoch 21/50\n",
+      "183/183 [==============================] - 5s 26ms/step - loss: 1.2327\n",
+      "Epoch 22/50\n",
+      "183/183 [==============================] - 5s 29ms/step - loss: 1.2091\n",
+      "Epoch 23/50\n",
+      "183/183 [==============================] - 6s 33ms/step - loss: 1.1829\n",
+      "Epoch 24/50\n",
+      "183/183 [==============================] - 6s 32ms/step - loss: 1.1534\n",
+      "Epoch 25/50\n",
+      "183/183 [==============================] - 5s 25ms/step - loss: 1.1290\n",
+      "Epoch 26/50\n",
+      "183/183 [==============================] - 5s 26ms/step - loss: 1.1041\n",
+      "Epoch 27/50\n",
+      "183/183 [==============================] - 5s 25ms/step - loss: 1.0757\n",
+      "Epoch 28/50\n",
+      "183/183 [==============================] - 5s 28ms/step - loss: 1.0425\n",
+      "Epoch 29/50\n",
+      "183/183 [==============================] - 5s 28ms/step - loss: 1.0135\n",
+      "Epoch 30/50\n",
+      "183/183 [==============================] - 4s 24ms/step - loss: 0.9898\n",
+      "Epoch 31/50\n",
+      "183/183 [==============================] - 4s 24ms/step - loss: 0.9555\n",
+      "Epoch 32/50\n",
+      "183/183 [==============================] - 5s 28ms/step - loss: 0.9258\n",
+      "Epoch 33/50\n",
+      "183/183 [==============================] - 6s 31ms/step - loss: 0.8966\n",
+      "Epoch 34/50\n",
+      "183/183 [==============================] - 5s 29ms/step - loss: 0.8654\n",
+      "Epoch 35/50\n",
+      "183/183 [==============================] - 4s 24ms/step - loss: 0.8357\n",
+      "Epoch 36/50\n",
+      "183/183 [==============================] - 6s 32ms/step - loss: 0.8073\n",
+      "Epoch 37/50\n",
+      "183/183 [==============================] - 5s 30ms/step - loss: 0.7780\n",
+      "Epoch 38/50\n",
+      "183/183 [==============================] - 4s 24ms/step - loss: 0.7506\n",
+      "Epoch 39/50\n",
+      "183/183 [==============================] - 4s 23ms/step - loss: 0.7187\n",
+      "Epoch 40/50\n",
+      "183/183 [==============================] - 5s 26ms/step - loss: 0.6925\n",
+      "Epoch 41/50\n",
+      "183/183 [==============================] - 5s 30ms/step - loss: 0.6620\n",
+      "Epoch 42/50\n",
+      "183/183 [==============================] - 5s 28ms/step - loss: 0.6350\n",
+      "Epoch 43/50\n",
+      "183/183 [==============================] - 6s 35ms/step - loss: 0.6057\n",
+      "Epoch 44/50\n",
+      "183/183 [==============================] - 7s 38ms/step - loss: 0.5811\n",
+      "Epoch 45/50\n",
+      "183/183 [==============================] - 5s 29ms/step - loss: 0.5569\n",
+      "Epoch 46/50\n",
+      "183/183 [==============================] - 5s 27ms/step - loss: 0.5296\n",
+      "Epoch 47/50\n",
+      "183/183 [==============================] - 5s 28ms/step - loss: 0.5028\n",
+      "Epoch 48/50\n",
+      "183/183 [==============================] - 5s 27ms/step - loss: 0.4732\n",
+      "Epoch 49/50\n",
+      "183/183 [==============================] - 6s 31ms/step - loss: 0.4484\n",
+      "Epoch 50/50\n",
+      "183/183 [==============================] - 7s 38ms/step - loss: 0.4261\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.src.callbacks.History at 0x141f32590>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model.fit(train_X, train_Y, batch_size=64, epochs=50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "5ba88580-104f-40b2-a33d-0a3114c4453e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " lstm (LSTM)                 (None, 100)               52800     \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 31)                3131      \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 55931 (218.48 KB)\n",
+      "Trainable params: 55931 (218.48 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcade888-6c09-4fef-80ad-0f7eca0d5e5b",
+   "metadata": {},
+   "source": [
+    "-------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae1afd78-ba58-45fe-8a0e-d114923d24e1",
+   "metadata": {},
+   "source": [
+    "#### 여태까지 했던거 정리\n",
+    "- LSTM 레이어를 이용하여 작곡 AI를 만듦\n",
+    "    - train_X, train_Y로 학습시켰다. (각각 25개, 11680개씩)\n",
+    "- 만든 모델\n",
+    "    - input : 25개의 문자를 입력한다면\n",
+    "    - output : 다음 문자를 예측해주는 프로그램 (일종의 코드)\n",
+    "    - 따라서 model.predict([25개 문자])를 하면 한 글자만 예측하게 되니 반복문을 통해 여러번 반복시켜준다"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "617eb519-8dee-4617-800e-17d856f23b77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "다음 문자가 올 확률 :  [[2.9400101e-06 1.5767519e-08 1.6570741e-08 6.6890959e-07 2.7467590e-06\n",
+      "  9.9901164e-01 5.9358270e-05 1.8257993e-05 3.3275125e-09 8.6563375e-08\n",
+      "  2.5808370e-07 4.5119631e-07 3.0264424e-09 1.1507207e-06 1.6126896e-06\n",
+      "  2.0852785e-04 4.0433450e-05 6.4873170e-08 1.6002700e-07 8.6361197e-06\n",
+      "  1.3078492e-04 4.2236836e-05 6.1239717e-08 1.7917242e-06 6.0037633e-05\n",
+      "  2.1375732e-04 1.0248308e-04 5.4570996e-06 5.6581284e-06 8.0658130e-05\n",
+      "  2.9184909e-08]]\n",
+      "가장 큰 확률인 다음 문자의 인덱스 :  5\n",
+      "가장 큰 확률인 다음 문자 :  2\n",
+      "가장 큰 확률인 다음 문자를 수치화 :  5\n",
+      "실제 다음 문자 :  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# digital_data : 원본 데이터를 수치화한 것\n",
+    "# 여기서 랜덤으로 25개 뽑아서 predict에 넣어보자\n",
+    "\n",
+    "import random\n",
+    "ind = random.randint(1, len(digital_data)-26)\n",
+    "# 무작위로 데이터 뽑기\n",
+    "test_X = digital_data[ind:ind+25]\n",
+    "# 원핫인코딩\n",
+    "test_X = tf.one_hot(test_X, 31)\n",
+    "# 2차원 데이터를 3차원으로 늘리기\n",
+    "test_X = tf.expand_dims(test_X, axis = 0)\n",
+    "\n",
+    "predict_value = model.predict(test_X) # 무작위 25개 데이터 리스트를 넣어줌 \n",
+    "print ('다음 문자가 올 확률 : ', predict_value) # 예측값은 다 확률임. 여기서 가장 확률이 높은게 다음 문자가 될거임\n",
+    "max_rate = np.argmax(predict_value[0]) # argmax : 특정 리스트에서 가장 높은 확률의 인덱스 리턴\n",
+    "print ('가장 큰 확률인 다음 문자의 인덱스 : ', max_rate)\n",
+    "print ('가장 큰 확률인 다음 문자 : ', list(data_table.keys())[max_rate])\n",
+    "print ('가장 큰 확률인 다음 문자를 수치화 : ', data_table[list(data_table.keys())[max_rate]])\n",
+    "print ('실제 다음 문자 : ', digital_data[ind+25])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "102ba7fb-acaa-4b70-a41d-ab451a791591",
    "metadata": {},
    "outputs": [],
    "source": []
