edit the eda raisin and do eda about abalone

--- a/report/classification_raisin.ipynb
+++ b/report/classification_raisin.ipynb
@@ -20,12 +20,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "c3105053",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-14T08:17:22.558350Z",
-     "start_time": "2024-07-14T08:17:22.555568Z"
+     "end_time": "2024-07-15T15:27:46.948997Z",
+     "start_time": "2024-07-15T15:27:45.646169Z"
     }
    },
    "outputs": [],
@@ -65,12 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "4925f320",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-14T08:17:22.651477Z",
-     "start_time": "2024-07-14T08:17:22.561086Z"
+     "end_time": "2024-07-15T15:27:48.095722Z",
+     "start_time": "2024-07-15T15:27:47.798461Z"
     }
    },
    "outputs": [
@@ -181,7 +181,7 @@
        "4  0.792772   1073.251  Kecimen  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
    "source": [
     "# 파일 열기\n",
     "\n",
-    "df = pd.read_excel('../data/Raisin_Dataset/Raisin_Dataset.xlsx')\n",
+    "df = pd.read_excel('data/Raisin_Dataset/Raisin_Dataset.xlsx')\n",
     "df.head()"
    ]
   },
@@ -876,12 +876,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "id": "fe8f5075",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-14T10:53:49.929149Z",
-     "start_time": "2024-07-14T10:53:49.925355Z"
+     "end_time": "2024-07-15T16:49:03.970668Z",
+     "start_time": "2024-07-15T16:49:03.966287Z"
     }
    },
    "outputs": [],
@@ -895,12 +895,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "996315e8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-14T10:56:24.964256Z",
-     "start_time": "2024-07-14T10:56:24.959305Z"
+     "end_time": "2024-07-15T16:49:04.507030Z",
+     "start_time": "2024-07-15T16:49:04.501902Z"
     }
    },
    "outputs": [],
@@ -909,17 +909,18 @@
     "\n",
     "from sklearn.model_selection import train_test_split \n",
     "X_train, X_test, y_train, y_test = train_test_split(raisin_input, raisin_target, \n",
-    "                                                   stratify=raisin_target)"
+    "                                                   stratify=raisin_target, \n",
+    "                                                   test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "id": "7505ae53",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-14T10:58:22.361666Z",
-     "start_time": "2024-07-14T10:58:22.357127Z"
+     "end_time": "2024-07-15T16:49:06.298511Z",
+     "start_time": "2024-07-15T16:49:06.293683Z"
     }
    },
    "outputs": [],
