done eda DL about glass (reg)

--- a/report/DL_classification_HARTH.ipynb
+++ b/report/DL_classification_HARTH.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "## <span id='dl'><mark>DL</mark></span>\n",
     "    \n",
-    "deep learning으로 abalone을 classification한다. 목차는 아래와 같다.\n",
+    "deep learning으로 HARTH을 classification한다. 목차는 아래와 같다.\n",
     "\n",
     "- **1. 데이터 load and preprocessing**\n",
     "- **2. ANN (fully connected)**\n",
