done DL about diabetes classification

--- a/report/DL_classification_glass.ipynb
+++ b/report/DL_classification_glass.ipynb
@@ -2542,7 +2542,7 @@
     "    - 전환 후 CNN 2d를 적용하여 main feature extraction 후 pooling을 진행한다.\n",
     "    - Conv, pooling을 2번 반복 후 dense layer를 두어 classification한다.\n",
     "        - 중간에 dropout 층을 배치하여 overfitting을 막고 학습에 신중하도록 한다.\n",
-    "        - compile 시 적응형 학습율 알고리즘을 사용하는 Adagrad를 optimizer로 사용하겠다.\n",
+    "        - compile 시 적응형 학습율 알고리즘을 사용하는 Adam optimizer로 사용하겠다.\n",
     "- overfitting을 막기 위하여, DNN에서 했던 것과 같이 early stopping 콜백을 설치한다."
    ]
   },
