rename and LSTM, GRU

--- a/hongong/deep learning/IMDB_RNN.ipynb
+++ b/hongong/deep learning/IMDB_RNN.ipynb
@@ -10,7 +10,7 @@
    "id": "49603e22",
    "metadata": {},
    "source": [
-    "## learning-AI101 : IMDB classification (RNN)\n",
+    "## learning-AI101 : IMDB prediction (RNN)\n",
     "- 혼자 공부하는 머신러닝과 딥러닝 : 486p~525p\n",
     "- 2024.08.09.\n",
     "----\n",
