--- a/report/DL_regression_california_house_price.ipynb
+++ b/report/DL_regression_california_house_price.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f106a75e",
+   "id": "6d3f9db7",
    "metadata": {},
    "source": [
     "### <mark>Attention!</mark>\n",
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a963c6f9",
+   "id": "6a67195b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-11T02:46:12.929679Z",
@@ -74,14 +74,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c862c75b",
+   "execution_count": 3,
+   "id": "49d6d017",
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2024-08-11T02:52:38.489Z"
+     "end_time": "2024-08-11T02:53:51.395558Z",
+     "start_time": "2024-08-11T02:53:49.646119Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KeyboardInterrupt\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# 라이브러리 import\n",
     "\n",
@@ -100,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6545d2b3",
+   "id": "5dd51e24",
    "metadata": {},
    "outputs": [],
    "source": []
