done DL about california housing price reg

--- a/hongong/deep learning/number_LSTM_GRU.ipynb
+++ b/hongong/deep learning/number_LSTM_GRU.ipynb
@@ -15,7 +15,7 @@
     "- 2024.08.11.\n",
     "----\n",
     "\n",
-    "### LSTM\n",
+    "### LSTM과 GRU\n",
     "![image-4.png](attachment:image-4.png)\n",
     "\n",
     "- RNN은 layer가 많이 중첩될 수록 (cell이 많아질 수록) gradient vanishing 혹은 gradient exploding 문제가 발생한다.\n",
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f1cfaea2",
+   "id": "25c68685",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-11T15:53:37.189076Z",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "8f2b4615",
+   "id": "a4c28691",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-11T15:53:37.197619Z",
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "4c36eb8d",
+   "id": "27e76d46",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-11T15:53:37.205598Z",
@@ -340,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "1824cf3f",
+   "id": "b906b34f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-11T15:53:37.212578Z",
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "d72f7fed",
+   "id": "ef932a91",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-11T15:53:37.377573Z",
@@ -425,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7b296923",
+   "id": "769507db",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-11T15:53:37.394236Z",
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "517cf633",
+   "id": "de2c7426",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-11T15:53:41.744146Z",
@@ -698,7 +698,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "72c1e35c",
+   "id": "203185a0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-11T15:53:44.981161Z",
@@ -950,7 +950,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "061e0908",
+   "id": "95fa7361",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-11T15:53:45.327804Z",
