fix the issue that cannot view figure

--- a/report/HARTH/DL_classification_HARTH.ipynb
+++ b/report/HARTH/DL_classification_HARTH.ipynb
@@ -1001,7 +1001,21 @@
       "Epoch 11/100\n",
       "32307/32307 [==============================] - 31s 966us/step - loss: 0.6028 - accuracy: 0.8226 - val_loss: 0.6029 - val_accuracy: 0.8232\n",
       "Epoch 12/100\n",
-      "21175/32307 [==================>...........] - ETA: 9s - loss: 0.6021 - accuracy: 0.8227"
+      "32307/32307 [==============================] - 30s 937us/step - loss: 0.6027 - accuracy: 0.8228 - val_loss: 0.6029 - val_accuracy: 0.8238\n",
+      "Epoch 13/100\n",
+      "32307/32307 [==============================] - 27s 841us/step - loss: 0.6025 - accuracy: 0.8229 - val_loss: 0.6027 - val_accuracy: 0.8223\n",
+      "Epoch 14/100\n",
+      "32307/32307 [==============================] - 32s 992us/step - loss: 0.6024 - accuracy: 0.8230 - val_loss: 0.6024 - val_accuracy: 0.8236\n",
+      "Epoch 15/100\n",
+      "32307/32307 [==============================] - 31s 960us/step - loss: 0.6023 - accuracy: 0.8231 - val_loss: 0.6022 - val_accuracy: 0.8245\n",
+      "Epoch 16/100\n",
+      "32307/32307 [==============================] - 39s 1ms/step - loss: 0.6022 - accuracy: 0.8233 - val_loss: 0.6024 - val_accuracy: 0.8229\n",
+      "Epoch 17/100\n",
+      "32307/32307 [==============================] - 43s 1ms/step - loss: 0.6021 - accuracy: 0.8234 - val_loss: 0.6021 - val_accuracy: 0.8240\n",
+      "Epoch 18/100\n",
+      "32307/32307 [==============================] - 40s 1ms/step - loss: 0.6021 - accuracy: 0.8234 - val_loss: 0.6021 - val_accuracy: 0.8236\n",
+      "Epoch 19/100\n",
+      "13872/32307 [===========>..................] - ETA: 20s - loss: 0.6035 - accuracy: 0.8231"
      ]
     }
    ],
@@ -1479,7 +1493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11dffbdd",
+   "id": "9f64c120",
    "metadata": {},
    "source": [
     "하지만, 위 결과를 잘 생각해보자. **CNN을 진행 시에 split_sequence로 순환형 데이터를 만들지 않고, 단지 df에서 reshape한 형태로만 학습을 진행했다.** 이는 그저 **DNN과 다름이 없을 뿐**이니, split_sequence 함수를 사용하여 데이터를 순환형으로 만든 후에 다시 학습을 진행한다. split_sequence를 아래와 같이 정의하자."
@@ -1488,7 +1502,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d07889c",
+   "id": "23b77a81",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.690Z"
@@ -1515,7 +1529,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f7a1b4e",
+   "id": "de5b37d2",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.691Z"
@@ -1535,7 +1549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96d515d6",
+   "id": "45cc644e",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.693Z"
@@ -1581,7 +1595,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff278019",
+   "id": "9c6b53e4",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.694Z"
@@ -1598,7 +1612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f1ed707",
+   "id": "c56d155b",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.696Z"
@@ -1620,7 +1634,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3581fc5e",
+   "id": "0c70b7cd",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.697Z"
@@ -1643,7 +1657,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97398351",
+   "id": "7587221c",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.698Z"
@@ -1659,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "294189ad",
+   "id": "ea9397fe",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.699Z"
@@ -1742,7 +1756,8 @@
     "      \n",
     "<br>\n",
     "\n",
-    "![image.png](attachment:image.png)\n",
+    "<img src='https://miro.medium.com/v2/resize:fit:1358/0*IYsBMfBEIQGiY88r.png' width='500px'>\n",
+    "<img src='\n",
     "\n",
     "**U-net을 정확히 이해하기 위해서 위 U-net 이미지 figure만 보고 직접 modeling하였다. 그로 인하여 거의 3일이 넘는 시간 동안 U-net modeling에만 시간을 투자했다. 아래는 그 시행착오의 흔적이다.**\n",
     "\n",
@@ -2050,7 +2065,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63c584c7",
+   "id": "74d0bd91",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2058,7 +2073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "026e25ed",
+   "id": "2ee2b1b7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2066,7 +2081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e9f31b49",
+   "id": "7ecd4c67",
    "metadata": {},
    "outputs": [],
    "source": []
