--- a/report/HARTH/DL_classification_HARTH.ipynb
+++ b/report/HARTH/DL_classification_HARTH.ipynb
@@ -1015,7 +1015,23 @@
       "Epoch 18/100\n",
       "32307/32307 [==============================] - 40s 1ms/step - loss: 0.6021 - accuracy: 0.8234 - val_loss: 0.6021 - val_accuracy: 0.8236\n",
       "Epoch 19/100\n",
-      "13872/32307 [===========>..................] - ETA: 20s - loss: 0.6035 - accuracy: 0.8231"
+      "32307/32307 [==============================] - 39s 1ms/step - loss: 0.6020 - accuracy: 0.8235 - val_loss: 0.6023 - val_accuracy: 0.8236\n",
+      "Epoch 20/100\n",
+      "32307/32307 [==============================] - 29s 894us/step - loss: 0.6020 - accuracy: 0.8236 - val_loss: 0.6021 - val_accuracy: 0.8246\n",
+      "Epoch 21/100\n",
+      "32307/32307 [==============================] - 28s 869us/step - loss: 0.6020 - accuracy: 0.8236 - val_loss: 0.6021 - val_accuracy: 0.8248\n",
+      "Epoch 22/100\n",
+      "32307/32307 [==============================] - 28s 871us/step - loss: 0.6020 - accuracy: 0.8237 - val_loss: 0.6019 - val_accuracy: 0.8244\n",
+      "Epoch 23/100\n",
+      "32307/32307 [==============================] - 28s 853us/step - loss: 0.6019 - accuracy: 0.8237 - val_loss: 0.6020 - val_accuracy: 0.8230\n",
+      "Epoch 24/100\n",
+      "32307/32307 [==============================] - 29s 887us/step - loss: 0.6019 - accuracy: 0.8237 - val_loss: 0.6017 - val_accuracy: 0.8231\n",
+      "Epoch 25/100\n",
+      "32307/32307 [==============================] - 31s 965us/step - loss: 0.6019 - accuracy: 0.8237 - val_loss: 0.6018 - val_accuracy: 0.8245\n",
+      "Epoch 26/100\n",
+      "32307/32307 [==============================] - 37s 1ms/step - loss: 0.6019 - accuracy: 0.8239 - val_loss: 0.6017 - val_accuracy: 0.8238\n",
+      "Epoch 27/100\n",
+      " 7873/32307 [======>.......................] - ETA: 18s - loss: 0.6041 - accuracy: 0.8237"
      ]
     }
    ],
@@ -1493,7 +1509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f64c120",
+   "id": "d6bdea44",
    "metadata": {},
    "source": [
     "하지만, 위 결과를 잘 생각해보자. **CNN을 진행 시에 split_sequence로 순환형 데이터를 만들지 않고, 단지 df에서 reshape한 형태로만 학습을 진행했다.** 이는 그저 **DNN과 다름이 없을 뿐**이니, split_sequence 함수를 사용하여 데이터를 순환형으로 만든 후에 다시 학습을 진행한다. split_sequence를 아래와 같이 정의하자."
@@ -1502,7 +1518,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23b77a81",
+   "id": "9844307d",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.690Z"
@@ -1529,7 +1545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de5b37d2",
+   "id": "bf9672f1",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.691Z"
@@ -1549,7 +1565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45cc644e",
+   "id": "aebe48fd",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.693Z"
@@ -1595,7 +1611,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c6b53e4",
+   "id": "dd009c6d",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.694Z"
@@ -1612,7 +1628,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c56d155b",
+   "id": "92b06145",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.696Z"
@@ -1634,7 +1650,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c70b7cd",
+   "id": "0e4a46b0",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.697Z"
@@ -1657,7 +1673,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7587221c",
+   "id": "e8ed283c",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.698Z"
@@ -1673,7 +1689,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea9397fe",
+   "id": "a4007906",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2024-08-28T15:38:26.699Z"
@@ -1757,7 +1773,7 @@
     "<br>\n",
     "\n",
     "<img src='https://miro.medium.com/v2/resize:fit:1358/0*IYsBMfBEIQGiY88r.png' width='500px'>\n",
-    "<img src='\n",
+    "<img src='https://i.imgur.com/2MUbGYf.png' width='500px'>\n",
     "\n",
     "**U-net을 정확히 이해하기 위해서 위 U-net 이미지 figure만 보고 직접 modeling하였다. 그로 인하여 거의 3일이 넘는 시간 동안 U-net modeling에만 시간을 투자했다. 아래는 그 시행착오의 흔적이다.**\n",
     "\n",
@@ -2065,7 +2081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74d0bd91",
+   "id": "68f75a4c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2073,7 +2089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ee2b1b7",
+   "id": "ee18fd3f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -2081,7 +2097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ecd4c67",
+   "id": "fb7dba16",
    "metadata": {},
    "outputs": [],
    "source": []
