test : Plaidml is worked at python 3.7.16 / keras 2.4.4 (AMD GPU accelating)

--- a/report/HARTH/U-net_classification_HARTH.ipynb
+++ b/report/HARTH/U-net_classification_HARTH.ipynb
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "33246659",
+   "id": "7a1539eb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:04.488887Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "00f6ec9c",
+   "id": "7cef6d3c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:14.355765Z",
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "340edf35",
+   "id": "b8314cf4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:14.589116Z",
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "61aa9b38",
+   "id": "2dc8a5a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:14.607707Z",
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "94430c81",
+   "id": "f88f9b0b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:14.668005Z",
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "31f0111f",
+   "id": "59673c91",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:15.185566Z",
@@ -381,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "603d6899",
+   "id": "f5c64f6f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:21.157537Z",
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d7e5019a",
+   "id": "aaea9666",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:21.795205Z",
@@ -433,7 +433,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "9ff4f1ef",
+   "id": "7fc2920f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:21.804520Z",
@@ -524,7 +524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76f65e34",
+   "id": "893f073c",
    "metadata": {},
    "source": [
     "이전 unet_1d_custom 함수의 구성은 encoder에서부터 node의 수가 증가한 후, decoder에서 다시 node의 수가 대칭적으로 감소하는 형태였으나, 이는 U-net의 일반적인 형태가 아님을 인지한 뒤에 다시 수정한다. 수정하기 전의 model figure은 아래와 같다.\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "78c02fae",
+   "id": "a34fee1d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:22.745935Z",
@@ -731,7 +731,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "7f1ad2c3",
+   "id": "d952e4e6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:13:22.797470Z",
@@ -753,7 +753,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "d0f40c4b",
+   "id": "69279b58",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:19:16.524268Z",
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ef05b3f",
+   "id": "02e60b07",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:19:16.528529Z",
@@ -831,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bb03c85",
+   "id": "0f1e899f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:19:16.531456Z",
@@ -848,7 +848,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "630b9105",
+   "id": "a9f40935",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:19:16.535257Z",
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac185f83",
+   "id": "5ce975e1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-08-29T14:19:16.538082Z",
@@ -905,22 +905,19 @@
    },
    "outputs": [],
    "source": [
-    "# Visualization using Seaborn\n",
-    "# Confusion Matrix for Validation Data\n",
     "plt.figure(figsize=(10,7))\n",
     "sns.heatmap(cm_val, annot=True, fmt='d', cmap='Blues')\n",
-    "plt.title('Confusion Matrix - Validation Data')\n",
-    "plt.xlabel('Predicted Labels')\n",
-    "plt.ylabel('True Labels')\n",
+    "plt.title('confusion matrix - validation set')\n",
+    "plt.xlabel('predict label')\n",
+    "plt.ylabel('true')\n",
     "plt.show()\n",
     "\n",
-    "# Confusion Matrix for Test Data\n",
     "plt.figure(figsize=(10,7))\n",
     "sns.heatmap(cm_test, annot=True, fmt='d', cmap='Blues')\n",
-    "plt.title('Confusion Matrix - Test Data')\n",
-    "plt.xlabel('Predicted Labels')\n",
-    "plt.ylabel('True Labels')\n",
-    "plt.show()\n"
+    "plt.title('confusion matrix - test set')\n",
+    "plt.xlabel('predict label')\n",
+    "plt.ylabel('true')\n",
+    "plt.show()"
    ]
   }
  ],
