done classification about PAMAP using U-net(original)

--- a/report/PAMAP/CNN_classification_PAMAP.ipynb
+++ b/report/PAMAP/CNN_classification_PAMAP.ipynb
@@ -2091,13 +2091,7 @@
       "\u001b[1m47/47\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 11ms/step - accuracy: 0.9656 - loss: 0.1045 - val_accuracy: 0.3914 - val_loss: 2.6890\n",
       "Epoch 50/100\n",
       "\u001b[1m47/47\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 12ms/step - accuracy: 0.9622 - loss: 0.1239 - val_accuracy: 0.4129 - val_loss: 2.4784\n",
-      "Epoch 51/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 51/100\n",
       "\u001b[1m47/47\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 12ms/step - accuracy: 0.9636 - loss: 0.1078 - val_accuracy: 0.4424 - val_loss: 2.3840\n",
       "Epoch 52/100\n",
       "\u001b[1m47/47\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step - accuracy: 0.9601 - loss: 0.1286 - val_accuracy: 0.4155 - val_loss: 2.7399\n",
