edit way to split about train, test set and no-seem problem

--- a/class/deep learning application (Myung Gyu, Yi)/topic1.ipynb
+++ b/class/deep learning application (Myung Gyu, Yi)/topic1.ipynb
@@ -5,30 +5,31 @@
    "id": "cf85059b",
    "metadata": {},
    "source": [
-    "## learning-AI :  <딥러닝응용> (이명규 교수님) \n",
-    "### topic 1\n",
+    "## learning-AI : deep learning application (61357002)\n",
+    "### topic 1 : FAQ를 통한 머신러닝, 딥러닝 기본 개념 정리 1\n",
     "\n",
     "<br>\n",
     "\n",
     "- **임규연 (lky473736)**\n",
     "- 2024.09.05.\n",
+    "\n",
     "------"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2bea87b6",
+   "id": "0543fdf5",
    "metadata": {},
    "source": [
     "### FAQ\n",
     "    - https://github.com/lky473736/learning-AI/blob/main/FAQ.md\n",
-    "    - https://github.com/MyungKyuYi/AI-class/blob/main/README.md\n"
+    "    - https://github.com/MyungKyuYi/AI-class/blob/main/README.md\n",
+    "    - 중간고사, 기말고사에 출제됨"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "12a08d46",
+   "id": "cc9908c1",
    "metadata": {},
    "source": [
     "- **인공지능에서 지능에 해당하는 기능은 무엇인가?**  \n",
@@ -90,9 +91,8 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
-   "id": "7ba17cd8",
+   "id": "a650a856",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-05T01:13:26.640702Z",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b42bccbd",
+   "id": "c64978d3",
    "metadata": {},
    "source": [
     "<br> \n",
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10a05a62",
+   "id": "dd324339",
    "metadata": {},
    "source": [
     "<br>\n",
@@ -168,48 +168,8 @@
     "- **회귀에서 절편과 기울기가 의미하는 바는? 딥러닝과 어떻게 연관되는가?**  \n",
     "    - 절편과 기울기가 딥러닝에서 사용되는 것은 퍼셉트론 각각의 weight와 bias\n",
     "    - 딥러닝은 사실 weight와 bias를 epoch를 거듭하여 수정하여 최적의 parameter를 찾는 과정\n",
-    "    - SGD 참고\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "- **교차검증, K-fold 교차검증의 의미와 차이**  \n",
-    "<br>  \n",
-    "- **하이퍼파라미터 튜닝이란 무엇인가?**  \n",
-    "<br>  \n",
-    "- **CNN의 합성곱의 역할은?**  \n",
-    "<br>  \n",
-    "- **CNN의 풀링층의 역할은?**  \n",
-    "<br>  \n",
-    "- **CNN의 Dense Layer의 역할은?**  \n",
-    "<br>  \n",
-    "- **CNN의 stride, filter의 역할? 필터의 가중치는 어떻게 결정되는가?**  \n",
-    "<br>  \n",
-    "- **RNN을 사용하는 이유와 한계점은?**  \n",
-    "<br>  \n",
-    "- **LSTM을 사용하는 이유와 한계점은?**  \n",
-    "<br>  \n",
-    "- **GRU를 사용하는 이유와 차별성은?**  \n",
-    "<br>  \n",
-    "- **결정트리에서 불순도(Impurity) – 지니 계수(Gini Index)란 무엇인가?**  \n",
-    "<br>  \n",
-    "- **앙상블이란 무엇인가?**  \n",
-    "<br>  \n",
-    "- **부트스트랩핑(bootstrapping)이란 무엇인가?**  \n",
-    "<br>  \n",
-    "- **배깅(Bagging)이란 무엇인가?**  \n",
-    "<br>  \n",
-    "- **주성분 분석(PCA)이란 무엇인가?**  \n",
-    "<br>  \n",
-    "- **Dense Layer란 무엇인가?**\n"
+    "    - SGD 참고\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bec91dc8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
