--- a/hongong/deep learning/number_LSTM_GRU.ipynb
+++ b/hongong/deep learning/number_LSTM_GRU.ipynb
@@ -876,13 +876,7 @@
       "4/4 [==============================] - 0s 9ms/step - loss: 0.0327 - val_loss: 0.0376\n",
       "Epoch 83/100\n",
       "4/4 [==============================] - 0s 8ms/step - loss: 0.5267 - val_loss: 0.0656\n",
-      "Epoch 84/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 84/100\n",
       "4/4 [==============================] - 0s 8ms/step - loss: 0.2454 - val_loss: 0.4280\n",
       "Epoch 85/100\n",
       "4/4 [==============================] - 0s 9ms/step - loss: 1.1849 - val_loss: 1.6994\n",
@@ -995,7 +989,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.3"
   },
   "toc": {
    "base_numbering": 1,
@@ -1009,6 +1003,35 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
