--- a/class/assignment/topic3/CNN-LSTM(recurrence)_classification_abalone(assignment).ipynb
+++ b/class/assignment/topic3/CNN-LSTM(recurrence)_classification_abalone(assignment).ipynb
@@ -3012,7 +3012,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "c76f13e4",
+   "id": "f35eb4a6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-09-24T15:31:57.150560Z",
@@ -3143,13 +3143,7 @@
       "\u001b[1m43/43\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 154ms/step - accuracy: 0.8759 - loss: 0.3760 - val_accuracy: 0.8623 - val_loss: 0.3633\n",
       "Epoch 49/60\n",
       "\u001b[1m43/43\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 156ms/step - accuracy: 0.8875 - loss: 0.3557 - val_accuracy: 0.8506 - val_loss: 0.3667\n",
-      "Epoch 50/60\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 50/60\n",
       "\u001b[1m43/43\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 161ms/step - accuracy: 0.8988 - loss: 0.3355 - val_accuracy: 0.8536 - val_loss: 0.3736\n",
       "Epoch 51/60\n",
       "\u001b[1m43/43\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m9s\u001b[0m 203ms/step - accuracy: 0.8882 - loss: 0.3513 - val_accuracy: 0.8604 - val_loss: 0.3589\n",
