--- a/class/assignment/topic7/linearAE_non-linearAE_HAR_DSADS(assignment).ipynb
+++ b/class/assignment/topic7/linearAE_non-linearAE_HAR_DSADS(assignment).ipynb
@@ -14,14 +14,10 @@
     "\n",
     "- **임규연 (lky473736)**\n",
     "- 2024.10.17.에 문서 작성\n",
-    "- **Reference**\n",
-    "    - https://github.com/MyungKyuYi/HAR/blob/main/Transformer_WISDM_1204.ipynb\n",
-    "    - https://keras.io/examples/timeseries/timeseries_classification_transformer/\n",
-    "    - https://blogs.nvidia.co.kr/blog/what-is-a-transformer-model/\n",
     "    \n",
     "## <span id='dl'><mark>DL</mark></span>\n",
     "    \n",
-    "**DSA 데이터에서 lyingRigh과 lyingBack의 정상 데이터(각각 480개)를 사용하고, Standing 활동을 비정상 데이터로 설정**한다. 두 가지 활동(lying과 Standing)을 섞어서 데이터를 구성한 후, **lying 데이터만 사용하여 오토인코더를 학습**한다. 이후, 혼합된 테스트 데이터(lying+Standing)를 AE에 입력하여 **reconstruction error**(입력과 출력의 차이)를 계산한다. 적절한 임계값(threshold)을 설정하여 분류를 수행한 뒤, 모델의 정확도(accuracy)를 평가한다.\n",
+    "**DSA 데이터에서 lyingRigh과 lyingBack의 정상 데이터(각각 480개)를 사용하고, standingInElevatorStill 활동을 비정상 데이터로 설정**한다. 두 가지 활동(lying과 standingInElevatorStill)을 섞어서 데이터를 구성한 후, **lying 데이터만 사용하여 오토인코더를 학습**한다. 이후, 혼합된 테스트 데이터(lying+standingInElevatorStill)를 AE에 입력하여 **reconstruction error**(입력과 출력의 차이)를 계산한다. 적절한 임계값(threshold)을 설정하여 분류를 수행한 뒤, 모델의 정확도(accuracy)를 평가한다.\n",
     "\n",
     "이때, linear AE와 non-linear AE를 각각 학습한 후에 두 metrics를 비교하겠다."
    ]
@@ -1005,7 +1001,7 @@
     }
    ],
    "source": [
-    "# 3가지 행동추출 (lyingRigh, lyingBack, standing)\n",
+    "# 3가지 행동추출 (lyingRigh, lyingBack, standingInElevatorStill)\n",
     "\n",
     "df = df.loc[df['activity'].isin(['lyingRigh', 'lyingBack', 'standingInElevatorStill'])]\n",
     "df"
