--- a/report/PAMAP/augmentation/augmentation_SMOTE_T-SMOTE_PAMAP(ankle,chest).ipynb
+++ b/report/PAMAP/augmentation/augmentation_SMOTE_T-SMOTE_PAMAP(ankle,chest).ipynb
@@ -5239,7 +5239,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10 (NGC 23.07 / TensorFlow 2.12) on Backend.AI",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5253,7 +5253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   },
   "varInspector": {
    "cols": {
